@@ -57,6 +57,34 @@ struct funs _functions[] = {
 	{"pow7", (func_t)gsl_pow_7, 1},
 	{"pow8", (func_t)gsl_pow_8, 1},
 	{"pow9", (func_t)gsl_pow_9, 1},
+	/* statistical methods on columns */
+	{"size", (func_t)nsl_sf_dummy, 1},
+	{"min", (func_t)nsl_sf_dummy, 1},
+	{"max", (func_t)nsl_sf_dummy, 1},
+	{"mean", (func_t)nsl_sf_dummy, 1},
+	{"median", (func_t)nsl_sf_dummy, 1},
+	{"stdev", (func_t)nsl_sf_dummy, 1},
+	{"var", (func_t)nsl_sf_dummy, 1},
+	{"gm", (func_t)nsl_sf_dummy, 1},
+	{"hm", (func_t)nsl_sf_dummy, 1},
+	{"chm", (func_t)nsl_sf_dummy, 1},
+	{"mode", (func_t)nsl_sf_dummy, 1},
+	{"quartile1", (func_t)nsl_sf_dummy, 1},
+	{"quartile3", (func_t)nsl_sf_dummy, 1},
+	{"iqr", (func_t)nsl_sf_dummy, 1},
+	{"percentile1", (func_t)nsl_sf_dummy, 1},
+	{"percentile5", (func_t)nsl_sf_dummy, 1},
+	{"percentile10", (func_t)nsl_sf_dummy, 1},
+	{"percentile90", (func_t)nsl_sf_dummy, 1},
+	{"percentile95", (func_t)nsl_sf_dummy, 1},
+	{"percentile99", (func_t)nsl_sf_dummy, 1},
+	{"trimean", (func_t)nsl_sf_dummy, 1},
+	{"meandev", (func_t)nsl_sf_dummy, 1},
+	{"meandevmedian", (func_t)nsl_sf_dummy, 1},
+	{"mediandev", (func_t)nsl_sf_dummy, 1},
+	{"skew", (func_t)nsl_sf_dummy, 1},
+	{"kurt", (func_t)nsl_sf_dummy, 1},
+	{"entropy", (func_t)nsl_sf_dummy, 1},
 	/* GSL special functions: see https://www.gnu.org/software/gsl/doc/html/specfunc.html */
 	/* Airy Functions and Derivatives */
 	{"Ai", (func_t)nsl_sf_airy_Ai, 1},
@@ -498,20 +526,6 @@ struct funs _functions[] = {
 	{"hypergeometricQ", (func_t)gsl_cdf_hypergeometric_Q, 4},
 	/* Logarithmic Distribution */
 	{"logarithmic", (func_t)nsl_sf_logarithmic, 2},
-	{"size", (func_t)nsl_sf_dummy, 1},
-	{"min", (func_t)nsl_sf_dummy, 1},
-	{"max", (func_t)nsl_sf_dummy, 1},
-	{"mean", (func_t)nsl_sf_dummy, 1},
-	{"median", (func_t)nsl_sf_dummy, 1},
-	{"stdev", (func_t)nsl_sf_dummy, 1},
-	{"gm", (func_t)nsl_sf_dummy, 1},
-	{"hm", (func_t)nsl_sf_dummy, 1},
-	{"chm", (func_t)nsl_sf_dummy, 1},
-	{"mode", (func_t)nsl_sf_dummy, 1},
-	{"quartile1", (func_t)nsl_sf_dummy, 1},
-	{"quartile3", (func_t)nsl_sf_dummy, 1},
-	{"iqr", (func_t)nsl_sf_dummy, 1},
-	/* Statistics for vectors */
 	{0, (func_t)0, 0}};
 
 #endif /*FUNCTIONS_H*/
